# agentlens

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
infra/: README.md  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml
infra/grafana/: datasources.yaml
infra/grafana/dashboards/: agent-overview.json  dashboards.yaml
src/agentlens/: __init__.py  config.py  deepseek.py  llms.py  model_selection.py  openrouter.py  sandbox.py  zhipu.py
src/agentlens/agents/: __init__.py  factory.py  (+3 more)
tests/: conftest.py  test_ag2_runtime.py  test_answer_relevancy.py  test_benchmarks.py  test_cli_runtimes.py  test_clustering.py  test_config.py  test_custom_spans.py  test_dataset_builder.py  test_dataset_cli.py  test_deepseek.py  test_error_handling.py  test_eval_cli_dataset.py  test_eval_cli_frameworks.py  test_eval_cli_interrupt.py  test_eval_cli_platform.py  test_eval_cli_sweep.py  test_eval_deterministic.py  test_eval_eight_layers.py  test_eval_judge.py  test_eval_metrics_init.py  test_eval_runner.py  test_experiment_comparison.py  test_factory.py  test_faithfulness.py  test_feature_flags.py  test_geval.py  test_hallucination.py  test_importers.py  test_metrics.py  test_model_selection.py  test_no_litellm.py  test_notifiers.py  test_openrouter.py  test_otel_setup.py  test_output_constraints.py  test_platform_alerts.py  test_platform_cli.py  test_platform_exporters.py  test_platform_repository.py  (+14 more)
(+65 files in other folders)
